--- a/kindex.html
+++ b/kindex.html
@@ -134,7 +134,9 @@
                     <input type="text" id="tags" name="tags">
                     <br>
                     <label for="content">Content:</label>
-                    <textarea id="content" name="content" required></textarea>
+                    <textarea id="content" name="content" required maxlength="200"></textarea>
+                    <small id="passwordHelpInline" class="text-muted">
+                    <p>Max 200 characters long.</p>
                     <br>
                     <button type="submit" id="submit-btn">Add Post</button>
                     <button type="button" id="clear-btn">Clear Form</button>
