--- a/kindex.html
+++ b/kindex.html
@@ -135,7 +135,7 @@
                     <br>
                     <label for="content">Content:</label>
                     <textarea id="content" name="content" required maxlength="200"></textarea>
-                    <small id="passwordHelpInline" class="text-muted">
+                    <small class="text-muted">
                     <p>Max 200 characters long.</p>
                     <br>
                     <button type="submit" id="submit-btn">Add Post</button>
