--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="row1">
         <div class="px-4 py-5 my-5 text-center">
-          <h1 class="display-5 fw-bold color">Quote of the day</h1>
+          <h1 class="display-5 fw-bold color">Quote of the day:</h1>
           <div class="col-lg-6 mx-auto">
             <p class="quote">
                 “The best way to predict the future is to invent it.” ― Alan Kay
